--- a/web/pom.xml
+++ b/web/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.aiguigu</groupId>
+        <groupId>edu.hqu</groupId>
         <artifactId>lease</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -25,13 +25,13 @@
     <dependencies>
 
         <dependency>
-            <groupId>com.aiguigu</groupId>
+            <groupId>edu.hqu</groupId>
             <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
-            <groupId>com.aiguigu</groupId>
+            <groupId>edu.hqu</groupId>
             <artifactId>model</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
