--- a/web/web-admin/pom.xml
+++ b/web/web-admin/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.aiguigu</groupId>
+        <groupId>edu.hqu</groupId>
         <artifactId>web</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -18,9 +18,15 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>com.aiguigu</groupId>
+            <groupId>edu.hqu</groupId>
             <artifactId>model</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-core</artifactId>
+            <version>3.5.3.1</version>
             <scope>compile</scope>
         </dependency>
 
